# rubka

./: LICENSE  README.md  Robotchat - چت ناشناس.py  fork.md  pyproject.toml  rubka_timer_with_inline--bot.py  send_image-bot.py  setup.py  test-bots دکوراتور چنل - گپ - یوزر.py  webhook.md  ربات ادیت اینلاین.py
Markdown-HTML/: Markdown.py  README.md
filters/: main.md  project.py
rubka/: asynco.py  rubino.py
test-bots/: Add_post.py  Group.py  Hide-Admin-Group.py  Html-Mode.py  Inline_Keyboard.py  Robot Generator - رباتساز.py  TvRubika.py  a-start-client.py  asynco.py  auto_delete.py  avatar-bot.py  ban-unban.py  button-join.py  charge.py  check-Follower.py  copy-message.py  dec-filters.py  dec-type-medya.py  delete-after.py  down-music.py  editGroup.py  edit_inline-and-text.py  error-timeout.py  get_chat_username.py  get_message.py  group-bot.py  group-channel-user.py  group-massenger.py  image-keypad.py  info-library.py  is_filters.py  join-url.py  metadata.py  music.py  noirBot.py  on_edited.py  panel-rubka-ir.py  post-channel.py  proxy-web_hook.py  proxy.py  (+23 more)
test-bots/Game Bot/: README.md  main.py
test-bots/Group-Bot/: README.md  main.py
